fix: revert back to deployments with more transparent configuration

--- a/examples/multi-engine.yaml
+++ b/examples/multi-engine.yaml
@@ -27,11 +27,12 @@ modelGroups:
     containerPort: 8000
     replicaCount: 2  # Scale for high availability
     
-    # Update strategy for StatefulSet
-    updateStrategy:
+    # Update strategy for Deployment
+    strategy:
       type: RollingUpdate
       rollingUpdate:
-        partition: 0  # Update all pods
+        maxSurge: 1
+        maxUnavailable: 0
     
     command:
       - "vllm"
@@ -97,14 +98,14 @@ modelGroups:
         nvidia.com/gpu: "1"
         memory: "24Gi"
     
-    # Persistent storage for model cache (StatefulSet volumeClaimTemplates)
-    persistentVolumes:
-      - name: model-cache
-        size: 50Gi
-        storageClass: "fast-ssd"
-        accessModes:
-          - ReadWriteOnce  # Each replica gets its own volume
-        mountPath: /root/.cache/huggingface
+    # Persistent storage - empty by default, use init containers for model weights
+    persistentVolumes: []
+    #   - name: model-cache
+    #     size: 50Gi
+    #     storageClass: "fast-ssd"
+    #     accessModes:
+    #       - ReadWriteMany  # Share across replicas
+    #     mountPath: /model-cache
     
     podSecurityContext:
       runAsUser: 0
@@ -141,11 +142,12 @@ modelGroups:
     containerPort: 30001
     replicaCount: 1
     
-    # Update strategy for StatefulSet
-    updateStrategy:
+    # Update strategy for Deployment
+    strategy:
       type: RollingUpdate
       rollingUpdate:
-        partition: 0  # Update all pods
+        maxSurge: 1
+        maxUnavailable: 0
     
     command:
       - "python"
@@ -202,14 +204,14 @@ modelGroups:
         nvidia.com/gpu: "1"
         memory: "12Gi"
     
-    # Persistent storage for model cache (StatefulSet volumeClaimTemplates)
-    persistentVolumes:
-      - name: model-cache
-        size: 30Gi
-        storageClass: "standard"
-        accessModes:
-          - ReadWriteOnce  # Each replica gets its own volume
-        mountPath: /root/.cache
+    # Persistent storage - empty by default, use init containers for model weights
+    persistentVolumes: []
+    #   - name: model-cache
+    #     size: 30Gi
+    #     storageClass: "standard"
+    #     accessModes:
+    #       - ReadWriteMany  # Share across replicas
+    #     mountPath: /model-cache
     
     volumes:
       - name: shm
@@ -251,11 +253,12 @@ modelGroups:
     containerPort: 8001
     replicaCount: 1
     
-    # Update strategy for StatefulSet
-    updateStrategy:
+    # Update strategy for Deployment
+    strategy:
       type: RollingUpdate
       rollingUpdate:
-        partition: 0  # Update all pods
+        maxSurge: 1
+        maxUnavailable: 0
     
     command:
       - "tritonserver"
@@ -314,14 +317,14 @@ modelGroups:
         nvidia.com/gpu: "1"
         memory: "24Gi"
     
-    # Persistent storage for compiled models (StatefulSet volumeClaimTemplates)
-    persistentVolumes:
-      - name: model-storage
-        size: 80Gi
-        storageClass: "fast-ssd"
-        accessModes:
-          - ReadWriteOnce  # Each replica gets its own volume
-        mountPath: /models
+    # Persistent storage - empty by default, use init containers for model weights
+    persistentVolumes: []
+    #   - name: model-storage
+    #     size: 80Gi
+    #     storageClass: "fast-ssd"
+    #     accessModes:
+    #       - ReadWriteMany  # Share across replicas
+    #     mountPath: /models
     
     volumes:
       - name: shm
