--- a/tests/model_groups_test.yaml
+++ b/tests/model_groups_test.yaml
@@ -1,7 +1,7 @@
 suite: test model groups
 tests:
-  - it: should render model group statefulset when enabled
-    template: templates/statefulset.yaml
+  - it: should render model group deployment when enabled
+    template: templates/deployment.yaml
     documentSelector:
       path: metadata.name
       value: RELEASE-NAME-inference-stack-test-vllm
@@ -56,9 +56,9 @@ tests:
           imagePullSecrets: []
     asserts:
       - hasDocuments:
-          count: 1
+          count: 2
       - isKind:
-          of: StatefulSet
+          of: Deployment
       - equal:
           path: metadata.name
           value: RELEASE-NAME-inference-stack-test-vllm
@@ -66,8 +66,8 @@ tests:
           path: spec.template.spec.containers[0].image
           value: "vllm/vllm-openai:latest"
 
-  - it: should not render model group statefulset when disabled
-    template: templates/statefulset.yaml
+  - it: should not render model group deployment when disabled
+    template: templates/deployment.yaml
     set:
       modelGroups:
         vllm-llama:
@@ -78,7 +78,7 @@ tests:
           enabled: false
     asserts:
       - hasDocuments:
-          count: 0
+          count: 1
 
   - it: should render service for enabled model group
     template: templates/service.yaml
@@ -126,8 +126,8 @@ tests:
           path: spec.ports[0].port
           value: 8000
 
-  - it: should render StatefulSet when persistentVolumes enabled
-    template: templates/statefulset.yaml
+  - it: should render Deployment when persistentVolumes enabled
+    template: templates/deployment.yaml
     documentSelector:
       path: metadata.name
       value: RELEASE-NAME-inference-stack-test-vllm
@@ -168,15 +168,15 @@ tests:
             enabled: false
     asserts:
       - hasDocuments:
-          count: 1
+          count: 2
       - isKind:
-          of: StatefulSet
+          of: Deployment
       - equal:
           path: metadata.name
           value: RELEASE-NAME-inference-stack-test-vllm
 
-  - it: should render StatefulSet when persistentVolumes disabled
-    template: templates/statefulset.yaml
+  - it: should render Deployment when persistentVolumes disabled
+    template: templates/deployment.yaml
     documentSelector:
       path: metadata.name
       value: RELEASE-NAME-inference-stack-test-vllm
@@ -211,12 +211,12 @@ tests:
             enabled: false
     asserts:
       - hasDocuments:
-          count: 1
+          count: 2
       - isKind:
-          of: StatefulSet
+          of: Deployment
 
   - it: should support GPU resources
-    template: templates/statefulset.yaml
+    template: templates/deployment.yaml
     documentSelector:
       path: metadata.name
       value: RELEASE-NAME-inference-stack-test-vllm
@@ -273,7 +273,7 @@ tests:
           imagePullSecrets: []
     asserts:
       - hasDocuments:
-          count: 1
+          count: 2
       - equal:
           path: spec.template.spec.containers[0].resources.limits["nvidia.com/gpu"]
           value: 2
@@ -282,7 +282,7 @@ tests:
           value: 1
 
   - it: should support custom command and env vars
-    template: templates/statefulset.yaml
+    template: templates/deployment.yaml
     documentSelector:
       path: metadata.name
       value: RELEASE-NAME-inference-stack-test-vllm
@@ -337,7 +337,7 @@ tests:
           imagePullSecrets: []
     asserts:
       - hasDocuments:
-          count: 1
+          count: 2
       - equal:
           path: spec.template.spec.containers[0].command[0]
           value: "--model"
